# dj-assistant

./: .gitignore  AUDIT-SIFT-PROMPT.md  CLAUDE.md  DESIGN.md  DESIGN_REVIEW.md  PRODUCT.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.interface-design/: interaction-model.md  penpot-detail-spec.md  system.md
audit/: PASS-0-carte.md  PASS-1-architecture.md  PASS-2-qualite.md  PASS-3-bugs.md  PASS-4-perfs.md  PASS-5-ui-ux.md  PASS-6-produit.md  PASS-7-maintenabilite.md  PASS-8-vision.md  PASS-9-benchmark.md  PLAN-SIFT.md  RAPPORT-FINAL.md  RAPPORT-direction.md  background-tasks-releve.md  batch-identify-releve.md  cancel-bug-live-releve.md  cancel-bug-live2-releve.md  cancel-latency-releve.md  dir-00-carto.md  dir-01-hypotheses.md  dir-02-preuves.md  dir-03-propositions.md  filed-autoadvance-releve.md  filing-detach-releve.md  p4-recensement.md  remove-batch-identify-releve.md  render-storm-releve.md  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/fixtures/: README.md
src-tauri/src/: actions.rs  db.rs  dedup.rs  ecartes.rs  encode.rs  ffmpeg.rs  filing.rs  fingerprint.rs  genres.rs  ipc.rs  ipc_filing.rs  ipc_identify.rs  ipc_library.rs  lib.rs  library.rs  main.rs  naming.rs  queue.rs  scanner.rs  settings.rs  sources.rs  tagging.rs  watcher.rs  worker.rs
src-tauri/src/analysis/: decode.rs  dynamics.rs  mod.rs  peaks.rs  phase.rs  spectrum.rs  structure.rs  tags.rs  verdict.rs
src-tauri/src/metadata/: cover.rs  discogs.rs  mod.rs
src-tauri/tests/: characterization.rs
(+68 files in other folders)
