[package]
name = "sift"
version = "0.0.1"
description = "Sift — prépa sons DJ"
authors = ["Sift"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sift_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["protocol-asset"] }
tauri-plugin-log = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
ffmpeg-sidecar = "2.5.0"
walkdir = "2.5.0"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-single-instance = "2"
notify-debouncer-full = "0.6.0"
rustfft = "6.4.1"
lofty = "0.22.2"
open = "5"
rusty-chromaprint = "0.2"
symphonia = { version = "0.5", features = ["mp3", "flac", "wav", "aiff", "isomp4", "aac", "alac"] }
ureq = { version = "2.10", features = ["json", "tls"] }
dirs = "5"

[dev-dependencies]
tempfile = "3.27.0"

# Audio DSP is unusably slow in an unoptimised debug build (rustfft + per-sample loops).
# Optimise dependencies fully, and our own code lightly, while keeping dev compile fast.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
